# wasm-wallet-interaction-demo

./: next.config.js  package-lock.json  package.json
roost/: Cargo.toml
roost/src/: ethereum.rs  lib.rs  main.rs  polkadot.rs
src/: connectors.ts
src/components/Layout/: Web3ConnectionContext.tsx
src/components/Layout/components/: ConnectButton.tsx
src/pages/: _app.tsx  index.tsx
src/wasm/: roost.d.ts  roost.js  roost_bg.wasm  roost_bg.wasm.d.ts
